--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-    background-image: url(/assets/img/evolution.jpg);
+    background-image: url(../img/background-digimon.jpg);
     font-size: 2.5rem;
     background-size: cover;
     background-attachment: fixed;
