--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,9 @@ html {
 
 body {
     font-size: 2.5rem;
-    background-image: url(../img/background-digimon.jpg);
+    background-image: url(../img/digimon-portada-2.png);
     background-size: cover;
+    background-position: bottom;
     background-attachment: fixed;
     font-family: 'Press Start 2P', cursive;
 }
@@ -57,6 +58,7 @@ h1 {
     padding: 0.5rem 2rem 0 2rem;
 
 }
+
 
 .table {
     background-color: rgba(30, 143, 255, 0.4);
