--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,9 @@ h1 {
     background-color: rgba(30, 143, 255, 0.9);
 }
 
+.imagen-miniatura {
+    border-radius: 1rem;
+}
 
 /* DIGICARDS */
 
@@ -103,4 +106,36 @@ h3, h5 {
 h5 {
     -webkit-text-stroke-width: 2px; /* Ancho del borde */
     font-size: 3rem;
+}
+
+
+
+.por-nivel {
+    margin-top: 3rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.contenedor-nivel {
+    border-radius: 5rem;
+    border-color: #000;
+    border: 3px solid #000;
+    margin-bottom: 3rem;
+    background-color: #fff;
+}
+
+.imagen-nivel {
+    border-top-left-radius: 5rem;
+    border-top-right-radius: 5rem;
+    margin: auto;
+    display: inline-block;
+}
+.nombre {
+    color: #000;
+    background-color: #fff;
+    padding-bottom: 2rem;
+    border-bottom-left-radius: 5rem;
+    border-bottom-right-radius: 5rem;
+    margin-bottom: 0;
 }
